fixed clock contrast

--- a/src/views/Game/Players.styl
+++ b/src/views/Game/Players.styl
@@ -252,6 +252,14 @@
         }
     }
     
+    #game-black-clock{
+        themed color player-black-clock
+    }
+
+    #game-white-clock{
+        themed color player-white-clock
+    }
+
     #game-black-clock .out_of_time, #game-white-clock .out_of_time {
         color: #f44;
     }
